--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.4",
     "@supabase/supabase-js": "^2.43.4",
     "@types/navermaps": "^3.7.5",
     "next": "14.2.2",
