--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-paginate": "^8.2.0",
+    "react-quill": "^2.0.0",
     "supabase": "^1.176.4"
   },
   "devDependencies": {
