--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.4",
     "@supabase/supabase-js": "^2.43.4",
     "@types/navermaps": "^3.7.5",
+    "@vercel/speed-insights": "^1.0.12",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
