--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/navermaps": "^3.7.5",
     "@vercel/speed-insights": "^1.0.12",
     "next": "14.2.2",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "supabase": "^1.176.4"
