--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "supabase": "^1.176.4"
   },
